# demo-quote-cli

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  quote.py
data/: quotes.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md
examples/: basic_usage.py  custom_theme.py
quotelib/: __init__.py  __main__.py  version.py
quotelib/cli/: __init__.py  main.py  parser.py
quotelib/config/: __init__.py  configuration.py  theme.py
quotelib/domain/: __init__.py  quote.py
quotelib/events/: __init__.py  bus.py
quotelib/formatters/: __init__.py  banner.py  base.py  fancy.py  json_formatter.py  plain.py
quotelib/repositories/: __init__.py  base.py  in_memory.py
quotelib/services/: __init__.py  factory.py  service.py
quotelib/strategies/: __init__.py  base.py  random_strategy.py  unique_strategy.py
quotelib/utils/: __init__.py  banner.py  text.py
scripts/: run.sh  test.sh
tests/: test_quote.py  test_repository.py  test_service.py  test_utils.py
